# bible-search-agent

./: .gitignore  README.md  main.py  pyproject.toml  verses.csv
evaluation/: eval_models.sh  leaderboard.py  refs.py  report_utils.py  run_eval.py
src/: agent.py  bible_loader.py  config.py  vector_store.py
